--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://connecting-site.netlify.app/" frameborder="0"
-    width="400px"  width="600" height="400" frameborder="1" border="1"></iframe>
+    <iframe src="https://polite-kashata-b5da09.netlify.app/" frameborder="1"
+      width="600" height="400" border="1"></iframe>
     <p>
-    <a href="WhatsApp Video 2025-01-27 at 5.20.02 PM.mp4" download="mp_introduction.mp4">click here for video</a>
+    <a href="my-intro_OCeGHJEL.mp4" download="mp_introduction.mp4">click here for video</a>
 </p>
 </body>
 </html>
